--- a/EntrepriseDeDistribution/Graphe_F.resx
+++ b/EntrepriseDeDistribution/Graphe_F.resx
@@ -117,4 +117,15 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="button1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABIAAAASCAYAAABWzo5XAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAADaSURBVDhPYxh5gAWIk4F4NxDfB+LzQDwbiN2BGAbyoTROIAHEp4H4PxDfBuLVQLweiB9DxeYD
+        cTmUjRfsB+LPQBwP5iEAyJUgA34DMcgQvAalAzFIQTCYhwlA3oEZgtcgUJgchzAxALoheA16D8T9ECZl
+        AGRLN4RJGQDFEsh7hABIHSgmcYJqIAa5ygHMww5AsQlSgytCwEAAiEEJ8DkQYzPMG4hBSQPkalBywAs0
+        gBiUkkG2gjSAwgyED0PFQIlVBIiJArDEB9IMcgHIgOtADEpnBF0yrAADAwC6wTVH81g78QAAAABJRU5E
+        rkJggg==
+</value>
+  </data>
 </root>
